@@ -1,3 +1,9 @@
+2007-06-25  Richard Sandiford  <richard@codesourcery.com>
+
+	* ld-mips-elf/mips16-local-stubs-1.s,
+	* ld-mips-elf/mips16-local-stubs-1.d: New tests.
+	* ld-mips-elf/mips-elf.exp: Run them.
+
 2007-06-19  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR ld/4590
